--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -1,9 +1,9 @@
 .background-image {
-    background-image: url('../img/logo.jpg');
+    background-image: url('../img/pantalla_inicio.jpg');
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 92vh;
+    height: 91vh;
 }
 
 .welcome-message {
@@ -25,4 +25,16 @@
 
 .welcome-message p {
     font-size: 24px;
+}
+
+.bordeo{
+    margin-bottom: 10px;
+    border-bottom: gray solid 1px;
+}
+
+.segurity{
+    color: white;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 15px;
 }
